# trk-exclusive-ww

./: .gitignore  CMakeLists.txt  README.md  README.md~
analysis/: README.md  README.md~  README.txt  get_single_histogram.py
analysis/LowPtAnalysis/source/: CMakeLists.txt
analysis/LowPtAnalysis/source/MyAnalysis/: CMakeLists.txt  CMakeLists.txt~
analysis/LowPtAnalysis/source/MyAnalysis/MyAnalysis/: MyxAODAnalysis.h  MyxAODAnalysis.h~
analysis/LowPtAnalysis/source/MyAnalysis/Root/: MyxAODAnalysis.cxx  MyxAODAnalysis.cxx~
analysis/LowPtAnalysis/source/MyAnalysis/share/: ATestRun_eljob.py
analysis/Robert_scripts/Bash_scripts/: Apply_Selections.sh  Each_Round.sh  Get_Ratio.sh  Get_Ratio_old.sh  Get_Same_Flavor_Ratios.sh  Macros.txt  TruthAnalysis.sh  plot_Cumulative.sh  plot_Cumulative_Ratios.sh  plot_Cumulative_emu_Ratios.sh  plot_Same_Flavor_w_error.sh  plot_TruthAnalysis.sh  (+6 more)
analysis/data/: RecoEff_inclusiveWW.root  trk_eff_LowPtRoI.root  trk_eff_doLowPt.root  trk_eff_pt.root
low-pt-tracking/scripts/: coriBatchShell_ExclusiveWW_AODfromHITS.sh  coriBatchShell_ExclusiveWW_AODfromHITS.slr  coriBatchShell_InclusiveWW_AODfromHITS.sh  coriBatchShell_InclusiveWW_AODfromHITS.slr  coriBatchShell_InclusiveWW_AODfromHITS_single.sh  coriBatchShell_LowPtRoIReco_RAWtoAOD.sh  coriBatchShell_LowPtRoIReco_RAWtoAOD.slr  coriBatchShell_MinBiasReco_RAWtoAOD.sh  coriBatchShell_MinBiasReco_RAWtoAOD.slr  coriBatchShell_ttbar_pileup_AODfromRDO.slr  coriBatchShell_ttbar_pileup_AODfromRDO_noflag.sh  coriBatchShell_ttbar_pileup_AODfromRDO_noflag_pileuptruth.sh  coriBatchShell_ttbar_pileup_AODfromRDO_pileuptruth.slr  coriBatchShell_ttbar_pileup_AODfromRDO_withflag.sh  coriBatchShell_ttbar_pileup_AODfromRDO_withflag_pileuptruth.sh  pdsfBatchShell_ExclusiveRDOs_Mar06.slr  pdsfBatchShell_InclusiveWW_AODfromHITS.sh  pdsfBatchShell_InclusiveWW_AODfromHITS.slr  placeholder.sh
low-pt-tracking/share/: jobOptions_RecExCommon.py
scripts/: README.md  coriBatchShell_ExclusiveRDOs_INCL_reco.slr  coriBatchShell_ExclusiveRDOs_INCL_reco_test.sh  pdsfBatchShell_ExclusiveRDOs_Array.slr  pdsfBatchShell_ExclusiveRDOs_Array_reco.sh  pdsfBatchShell_ExclusiveRDOs_Mar06.slr  pdsfBatchShell_ExclusiveRDOs_Mar06_reco.sh  placeholder.sh
(+41 files in other folders)
